--- a/docs/面试准备/系统设计/示例.md
+++ b/docs/面试准备/系统设计/示例.md
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 4
+sidebar_position: 3
 ---
 
-# 系统设计示例
+# 示例
 
 - 流式视频分析系统
 - 分布式监控系统
@@ -10,6 +10,12 @@ sidebar_position: 4
 - 数据沿袭系统
 
 ### 流式视频分析系统
+
+构建流式视频分析流水线：https://cloud.google.com/architecture/building-a-streaming-video-analytics-pipeline
+
+使用场景：用户可以对视频进行实时分析
+
+![build-streaming-video-analytics-pipeline-01](/img/system/build-streaming-video-analytics-pipeline-01.svg)
 
 1. 客户端应用将源视频文件上传到 Cloud Storage 存储分区。
 2. 对于每项文件上传操作，系统会通过向 Pub/Sub 发布消息自动通知客户端。
@@ -21,3 +27,8 @@ sidebar_position: 4
 8. 对于包含流水线的可自定义参数指定的有意义注释的视频片段（例如，包含人物的所有片段），将输出消息发送到 Pub/Sub。
 9. 消费者应用从 Pub/Sub 读取输出消息以显示过滤的注释。
 
+### 分布式监控系统
+
+Distributed tracing with OpenTelemetry and Cloud Trace：https://www.youtube.com/watch?v=NQeK8Kbu6UM
+
+使用场景：对大型系统中的每个事件进行监控以及分析
