--- a/docs/面试准备/系统设计/示例.md
+++ b/docs/面试准备/系统设计/示例.md
@@ -9,11 +9,9 @@ sidebar_position: 3
 - CI/CD 流水线
 - 数据沿袭系统
 
-### 流式视频分析系统
-
-构建流式视频分析流水线：https://cloud.google.com/architecture/building-a-streaming-video-analytics-pipeline
-
-使用场景：用户可以对视频进行实时分析
+## 流式视频分析系统
+- 资料来源：[Building a streaming video analytics pipeline](https://cloud.google.com/architecture/building-a-streaming-video-analytics-pipeline)
+- 使用场景：系统可以对视频进行实时分析
 
 ![build-streaming-video-analytics-pipeline-01](/img/system/build-streaming-video-analytics-pipeline-01.svg)
 
@@ -27,8 +25,51 @@ sidebar_position: 3
 8. 对于包含流水线的可自定义参数指定的有意义注释的视频片段（例如，包含人物的所有片段），将输出消息发送到 Pub/Sub。
 9. 消费者应用从 Pub/Sub 读取输出消息以显示过滤的注释。
 
-### 分布式监控系统
+## 分布式监控系统
+- 资料来源：[Distributed tracing with OpenTelemetry and Cloud Trace](https://www.youtube.com/watch?v=NQeK8Kbu6UM)
+- 使用场景：对大型系统中的每个事件进行监控以及分析
 
-Distributed tracing with OpenTelemetry and Cloud Trace：https://www.youtube.com/watch?v=NQeK8Kbu6UM
+1. 当系统越来越复杂的时候，需要分析系统的瓶颈或者延迟主要出现在哪个地方。
 
-使用场景：对大型系统中的每个事件进行监控以及分析
+<img class="system-small-img" src="https://cdn.jsdelivr.net/gh/Interview-Science/Book/static/img/system/Distributed-tracing.png" alt="Distributed tracing" />
+
+2. 就像平时编程报错时，终端会返回其错误出现的地方以及其调用链，我们可以在分布式系统对每个事件都分配一个 ID，并且记录其父节点 ID。每个 ID 都会记录额外信息，例如时间戳用来分析延迟。
+
+<img class="system-small-img" src="https://cdn.jsdelivr.net/gh/Interview-Science/Book/static/img/system/Distributed-tracing2.png" alt="Distributed tracing2" />
+
+3. 使用 OpenTelemetry 框架协助，我们可以追踪每个 ID 的具体信息以及调用链。
+
+<img class="system-small-img" src="https://cdn.jsdelivr.net/gh/Interview-Science/Book/static/img/system/Distributed-tracing3.png" alt="Distributed tracing3" />
+
+## CI/CD 流水线系统
+- 资料来源：[Building a serverless DevOps pipeline for Salesforce with Cloud Build](https://cloud.google.com/architecture/building-a-serverless-devops-pipeline-for-salesforce)
+- 使用场景：建立高效的 CI/CD 流程
+
+![building-a-serverless-devops-pipeline-for-salesforce-architecture](/img/system/building-a-serverless-devops-pipeline-for-salesforce-architecture.svg)
+
+1. 开发者针对正在开发的功能在 GitHub 中创建功能分支。
+2. 开发者在 Salesforce 暂存组织中完成开发工作并运行单元测试。
+3. 开发者提交开发工作并推送到其源代码库（在本教程中为 GitHub）。
+4. 开发者创建拉取请求以将其工作合并到版本分支中。
+5. 创建拉取请求会自动触发 Cloud Build 作业以运行测试。
+6. 负责人员（通常是团队负责人）审核并批准拉取请求，以将开发工作合并到版本分支中。
+7. 与版本分支的合并会自动触发 Cloud Build 作业，以将代码库部署到 QA 或其他 Salesforce 环境。
+8. （可选）在 QA 环境中执行手动测试和审核。
+9. 负责人员创建拉取请求以将代码合并到 main 分支。
+10. 向 main 分支发出的拉取请求触发 Cloud Build 作业，将代码部署到生产环境。
+
+![building-a-serverless-devops-pipeline-for-salesforce-branching-strategy](/img/system/building-a-serverless-devops-pipeline-for-salesforce-branching-strategy.svg)
+
+如图所示，分支策略包括以下部分：
+
+1. 一个主分支。主分支中的代码反映了在生产环境中运行的代码的当前版本。
+2. 一个版本分支。版本分支是相对更长期有效的分支（与功能分支相比），它协调与某个版本相关的所有更改和代码。组织会为每个新版本创建新的版本分支。
+3. 一个或多个功能分支。功能分支有助于将进行中的工作与主分支中最新版本的代码隔离开来。通常，多个功能分支构成一个版本分支。开发者创建用于问题修复的功能分支是一种良好的做法。
+
+开发者克隆项目代码库后，会在本地机器上或 Salesforce 暂存组织中进行开发。他们可以使用暂存组织针对所做的更改进行单元测试。如果单元测试通过，开发者提交代码并推送到源代码库。然后，他们生成拉取请求，以便将其代码合并到父版本分支中。
+
+拉取请求会自动触发执行以下操作的 Cloud Build 作业：
+- 创建一个新的暂存组织来运行单元测试。
+- 使用测试结果更新拉取请求。
+
+此时，团队负责人和产品负责人可以审核拉取请求。如果请求获得批准，更改会合并到版本分支中。
