--- a/docs/面试准备/非技术问题/示例.md
+++ b/docs/面试准备/非技术问题/示例.md
@@ -4,43 +4,53 @@ sidebar_position: 3
 
 # 示例
 
-- 流式视频分析系统
-- 分布式监控系统
-- CI/CD 流水线
-- 数据沿袭系统
+- 谷歌
+- 脸书
+- 亚马逊
+- 微软
 
-### 流式视频分析系统
+### 谷歌
 
-构建流式视频分析流水线：https://cloud.google.com/architecture/building-a-streaming-video-analytics-pipeline
+> 谷歌有 “赚钱不必为恶” 的座右铭，在一场公司会议中，与会者辩论应不应该对广告制度做出一项改变，这项改变的优点有可能为公司带来相当可观的收入，其中一位工程领导人捶桌子说：“我们不能这么做，这是恶行。“ 会议室突然鸦雀无声，接下来是冗长的讨论，最终这项改变没通过。
 
-使用场景：用户可以对视频进行实时分析
+- 关键字：认同公司文化
+- 总结：公司的价值观是拥有一个健全稳固，被充分了解公司文化的终极价值，是你和公司一切作为的基础；优异文化的力量可以让每位员工变得更好，然后公司跟着扶摇直上。只顾眼前利益，但是忽略用户的行为会被员工和市场所唾弃。
 
-![build-streaming-video-analytics-pipeline-01](/img/system/build-streaming-video-analytics-pipeline-01.svg)
+> 前谷歌高阶主管，雅虎执行长，玛丽莎是硅谷最知名的职业妇女，她提到，导致职业倦怠的不是工作过度，而是必须放弃对你而言重要的事所产生的愤怒。
 
-1. 客户端应用将源视频文件上传到 Cloud Storage 存储分区。
-2. 对于每项文件上传操作，系统会通过向 Pub/Sub 发布消息自动通知客户端。
-3. 对于每条新通知，Dataflow 流水线都会执行以下操作：
-4. 从 Pub/Sub 消息中读取文件元数据。
-5. 将文件加载到内存中，并将其拆分为数个 5 秒的片段。
-6. 将每个片段发送至 Video Intelligence API，后者随后会返回注释。
-7. 将所有注释都存储在 BigQuery 表中。
-8. 对于包含流水线的可自定义参数指定的有意义注释的视频片段（例如，包含人物的所有片段），将输出消息发送到 Pub/Sub。
-9. 消费者应用从 Pub/Sub 读取输出消息以显示过滤的注释。
+- 关键字：工作生活平衡
+- 总结：如果你是员工：令你的工作有趣，并且根据项目安排做出合适的时间管理。如果你是组长：使工作愉快充实，你的主要职责不是确保员工周而复始地每周工作 40小时。你可以透过赋予员工职责和自由来管理这个层面，无需下令他们工作到更晚，或是早点下班和家人相处，只要叫他们管好自己分内的事，给予他们空间和自由，他们自己会安排时间，把工作做好。
 
-### 分布式监控系统
+> 谷歌的“产品助理”计划，直接从顶级学校中招聘计算机科学的应届生，然后分配他们有实际影响的任务。因为刚踏出校门的人没有经验，不会畏首畏尾，反而可能有很好的表现（当然也有可能搞砸）。布莱恩是谷歌招聘的第一位“产品助理“，招聘来直接负责 Gmail 的产品功能，直接和领导工程师保罗共事。布莱恩现在成为了安卓团队的领导人。
 
-Distributed tracing with OpenTelemetry and Cloud Trace：https://www.youtube.com/watch?v=NQeK8Kbu6UM
+> 有一年，罗森柏格准备对罗氏奖学金得主进行演讲（罗氏奖学金得主必须去牛津就读），演讲期间，他思考如何挑选以及邀请其中一些人来谷歌面试。他咨询谷歌创始人布林的意见，布林回答说：“何必伤脑筋，邀请全部啊。” 乍听之下似乎很疯狂，但是后来发现，其中一些奖学金得主在谷歌表现得非常好。
 
-使用场景：对大型系统中的每个事件进行监控以及分析
+- 关键字：招聘人才，让团队成员喜欢自己的工作
+- 总结：举例而言，如果你想挖角某家公司的员工，这家公司向来以拥有大量优秀员工闻名，如果你把光圈放大，寻找未来能把工作做得和今天一样好的人，你将能发现一些宝玉，你可以向他们提供现有雇主可能无法提供的机会，也许有工程师向加入产品管理部门，但是现有雇主不允许，也许有产品经理想转到销售部门，但是销售部门没有空缺。**如果你愿意冒险，让人尝试做新的事，你就可以招募到优秀的人才。**
 
-1. 当系统越来越复杂的时候，需要分析系统的瓶颈或者延迟主要出现在哪个地方。
+> Google Wave 是一款协作以及通信工具因为没有足够的用户量，推出一年就宣布停止。但是团队成员并没有收到责难，事实上，Wave 计划终止后，多数成员在内部很抢手，因为他们曾做过向极限推进的事。即使 Google Wave 失败了，但是 Google Wave 开发了大量有价值的技术，这些技术后来应用到 Google+ 和 Gmail。
 
-<img class="system-small-img" src="https://cdn.jsdelivr.net/gh/Interview-Science/Book/static/img/system/Distributed-tracing.png" alt="Distributed tracing" />
+- 关键字：应对项目失败，应对工作中遇到的失败
+- 总结：
+    1. **总结经验，从错误中学习，进行改变或者改进：**任何失败中都能够学习到宝贵的经验
+    2. **分析原因，不要因噎废食，扼杀创意：**小的失败是成功的必经之路
 
-2. 就像平时编程报错时，终端会返回其错误出现的地方以及其调用链，我们可以在分布式系统对每个事件都分配一个 ID，并且记录其父节点 ID。每个 ID 都会记录额外信息，例如时间戳用来分析延迟。
+> 2005年飓风重创美国墨西哥湾沿岸，当时 Google Earth 问世仅仅 8 个星期。团队很小，工作负荷已经超载。但在飓风肆虐期间，这支团队发出 8000 多张最新最即时，来自美国国家海洋总署的卫星图像，显示灾情范围，提供高解析度的街景和社区照片。这些图像对救援起到了很重要的作用。之后，这个救助计划演变成一支全职灾害应变团队，这个团队帮助了 2008 年受暴风雨袭所影响的中国春运，2011 年上万人死亡的日本地震和海啸。
 
-<img class="system-small-img" src="https://cdn.jsdelivr.net/gh/Interview-Science/Book/static/img/system/Distributed-tracing2.png" alt="Distributed tracing2" />
+关键字：如何让团队超负荷工作？如何激励成员主动工作？
 
-3. 使用 OpenTelemetry 框架协助，我们可以追踪每个 ID 的具体信息以及调用链。
+总结：
+- 奖励来自工作本身
+- 让团队感受到工作本身的意义
 
-<img class="system-small-img" src="https://cdn.jsdelivr.net/gh/Interview-Science/Book/static/img/system/Distributed-tracing3.png" alt="Distributed tracing3" />
+团队的大部分人并没有从中获取到金钱的奖励，激励他们的是工作本身。
+
+### 亚马逊
+
+> 亚马逊云平台就是一个典型的找到现有资源的其他盈利用途的例子，亚马逊将闲置的服务器租赁给第三方，
+> 1. 减少了云服务资源浪费，闲置服务可以得到更好的利用
+> 2. 获得了大量的营收，贡献了 12% 亚马逊的总利润
+> 3. 开拓了一个全新的市场，对于中小企业来说，他们再也不需要自己购买服务器了，能够推动科技企业发展
+
+- 关键字：节约资源，利用现有的资源进行拓展和盈利
+- 总结：通过观察，可以将原本用于解决狭隘问题的方法用作基础，利用到其他方面甚至可以创建一个新的市场
