--- a/docs/前期分析/刻意练习.md
+++ b/docs/前期分析/刻意练习.md
@@ -2,30 +2,33 @@
 sidebar_position: 4
 ---
 
-# 刻意练习（撰写中）
+# 刻意练习
 
-如果你有通过纸笔走迷宫的经验的话，你会发现从出口找入口要比反过来更加高效。
+在[《刻意练习：如何从新手到大师》](https://www.amazon.cn/dp/B01M6ZBZY3)这本书中，提到了如何利用刻意练习提高学习的效率，并成为大师。这个技巧对于算法以及系统设计的学习非常有帮助，本指南会利用它提到的几个准则来协助你学习，这里我们以算法为例：
+
+> 1. 刻意练习发生在人们的舒适区之外，而且要求学生持续不断地尝试那些刚好超出他当前能力范围的事物。因此，它需要人们付出近乎最大限度的努力。一般来讲，这并不令人心情愉快。
+
+算法学习需要花费大量的时间以及精力，但是并不代表花时间就有效，有的求职者刷了数百上千题依然没有达到面试的要求，我们需要找到科学的做题与复习方法才能提高效率。
+
+> 刻意练习包含得到良好定义的特定目标，通常还包括目标表现的某些方面；它并非指向某些模糊的总体改进。一旦设定了总体目标，导师或教练将制订一个计划，以便实现一系列微小的改变，最后将这些改变累积起来，构成之前期望的更大的变化。改进目标表现的某些方面，使得从业者能够看到他的表现已经通过练习得到了提高。
+
+寻找一位优秀的导师，导师能够协助你制订算法计划，例如每周攻克一个主题的算法题，每周完成一次竞赛，通过每周的学习熟悉各个主题的使用场景以及最佳实践并且看到自己的进步。
+
+> 刻意练习是有意而为的，也就是说，它需要人们完全的关注和有意识的行动。简单地遵照导师或教练的指示去做，还不够。学生必须紧跟他的练习的特定目标，以便能做出适当的调整，控制练习。
+
+每周完成一个主题的算法题之后，需要自己主动去总结这类题目的模式，使用常见以及自己犯的常见错误。
+
+> 刻意练习包含反馈，以及为应对那些反馈而进行调整的努力。在练习过程的早期，大量的反馈来自导师或教练，他们将监测学生的进步、指出存在的问题，并且提供解决这些问题的方法。随着时间的推移，学生必须学会自己监测自己、自己发现错误，并做出相应调整。这种自我监测，需要高效的心理表征。
+
+你能够通过国区官方题解以及导师的建议获得算法题的反馈，例如代码风格，做题思路，不同解法的分析。
+
+> 刻意练习既产生有效的心理表征，又依靠有效的心理表征。提高水平与改进心理表征是相辅相成的，两者不可偏废；随着人们水平的提升，表征也变得更加详尽和有效，反过来使得人们可能实现更大程度的改进。心理表征使人们能监测在练习中和实际的工作中做得怎么样。它们表明了做某件事的正确方法，并使得人们注意到什么时候做得不对，以及怎样来纠正。
+
+通过计划以及反馈你可以养成做题的习惯，并且可以学习到自省，学习到适合自己的做题方式。
+
+> 刻意练习通过着重关注过去获取的技能的某些特定方面，致力于有针对性地提高那些方面，并且几乎总是包括构建或修改那些过去已经获取的技能；随着时间的推移，这种逐步的改进最终将造就卓越的表现。由于新技能的学习是建立在现有技能基础上的，因此，导师会为初学者提供正确的基本技能，使学生后来能在更高层面上重新学习那些基本的技能。
+
+当做题做到一定程度之后，你对一些基础的概念会有更清晰的认识，你能够利用这些认识来解决更难的问题。
 
 
 
-### 了解岗位要求
-
-面试主要考核的内容包括：
-
-| 主题        | 占比        | 考核内容 |
-| ----------- | ----------- | -------  |
-| 算法        | 60% - 80%   | Leetcode, Hackerrank 等平台上的算法题，大约 85% 的面试题都是简单或者中等难度。|
-| 系统设计    | 0% - 20%    | 如何设计 Twitter |
-| 项目介绍    | 0% - 10%    | 项目难点，有挑战性的地方，特定场景的解决方案 |
-| 基础知识    | 5% - 10%    | 编程语言基础，操作系统基础 |
-| 非技术问题  | 10% - 40%   | 团队合作，个人成长 |
-
-在制定计划之前，你需要先了解自己现在的实际水平以及目标：
-
-| 主题        | 测试方法    | 目标 |
-| ----------- | ----------- | -------  |
-| 算法        | 参加 Leetcode Weekly Contest | 稳定做出三题 |
-| 系统设计    | 模拟面试    | 起码在三次模拟面试中获得正面的评价 |
-| 项目介绍    | 撰写 STAR 文档   | 能够阐述出
-| 基础知识    | 5% - 10%    | 编程语言基础，操作系统基础 |
-| 非技术问题  | 10% - 40%   | 团队合作，个人成长 |
