--- a/docs/前期分析/目标与计划.md
+++ b/docs/前期分析/目标与计划.md
@@ -5,33 +5,29 @@ sidebar_position: 3
 
 # 目标与计划
 
-### 目标
+## 目标
 
-在制定计划之前，你需要先了解自己现在的实际水平以及目标：
+在制定计划之前，请先了解求职对各个主题的要求以及总体目标：
 
 | 主题        | 总体目标 | 所需时间 |
 | ----------- | -------  | ---- |
-| 算法        | <ul><li>熟悉常用的数据结构的使用场景</li><li>独立完成大部分中等难度题目</li><li>Leetcode Weekly Contest 能够稳定做出三题</li></ul>| 三个月到一年 |
+| 算法        | <ul><li>熟悉常用数据结构，算法的使用场景和最佳实践</li><li>独立完成大部分中等难度题目</li><li>Leetcode 每周竞赛能够做出三题</li></ul>| 三个月到六个月 |
 | 系统设计    | <ul><li>熟悉常见的系统架构模式</li><li>熟悉系统设计组件的使用场景</li><li>在三次模拟面试中获得正面的评价</li></ul> | 一到三个月 |
 | 项目介绍    | <ul><li>简历上的项目可以阐述清楚最有挑战性的地方</li><li>简历上的项目阐述清楚学习到的东西</li><li>简历上的项目阐述清楚不同方案的优缺点</li></ul> | 一周 |
 | 基础知识    | <ul><li>了解编程语言特性</li><li>了解简历上的技术栈</li><li>了解数据库，网络协议，操作系统基础</li></ul> | 一个月 |
-| 非技术问题  | <ul><li>对于常见的十个问题，能够给出自己的看法以及故事</li><li>在三次模拟面试中获得正面的评价</li></ul> | 一周 |
+| 非技术问题  | <ul><li>对于常见的十个问题，能够说出自己的看法以及亲身经历</li><li>在三次模拟面试中获得正面的评价</li></ul> | 一周 |
 
-:::note
-你可以通过 [Leetcode Discuss](https://leetcode.com/discuss/interview-question?currentPage=1&orderBy=hot&query=) 来浏览其他人遇到的题目，大致了解题目的类型以及难度。
-:::
+## 计划
 
-### 计划
+制定**能力内有反馈的针对性分期计划**
 
-你需要为求职制定能力内有反馈的针对性分期计划
+### 能力内
+你选择的学习内容不应该对于你太简单或者太难，应该选择一些你需要一些思考以及时间就能完成的题目。每题所花费的时间应该在 15 - 30 分钟，否则你应该提高或者降低难度。
 
-#### 能力内
-你选择的题目不应该对于你太简单或者太难，应该选择一些你需要一些思考以及时间就能完成的题目。每题所花费的时间应该在 20 - 30 分钟，否则你应该降低或者提高难度。
-
-#### 有反馈
+### 有反馈
 计划的内容应该是能够得到反馈的，算法题你可以从平台的判断来获得反馈，系统设计以及基础知识可以通过与其他工程师交流或者模拟面试来得到反馈。
 
-#### 针对性
+### 针对性
 你的计划应该是具体明确的，不是一个广泛的计划，能够完成简单难度的算法题就不是一个有针对性的计划，参考：
 
 | 主题        | 计划 | 
@@ -42,14 +38,17 @@ sidebar_position: 3
 | 基础知识    | 学习数据库的常见存储引擎 |
 | 非技术问题  | 回答 “如何从失败中学习？”，并使用文档进行总结|
 
-#### 分期
-当你清楚了总体目标之后，那么就可以通过完成一些小的目标来达到这个总体目标，例如算法可以每周分成一个小的主题：
+### 分期
+当你清楚了总体目标之后，那么就可以通过完成一些小的目标来达到这个总体目标，例如算法方面每周分成一个小的主题：
 
 | 主题        | 计划 | 
 | ----------- | -------  |
-| 第一周      | 时空复杂度，循环不变示，递归树等衡量指标与概念 |
+| 第一周      | 时空复杂度，循环不变式，递归树等概念 |
 | 第二周      | 学习链表的类别以及使用场景，完成链表高频练习题 8 题，并使用文档进行总结 |
 | 第三周      | 学习二叉树的类别以及使用场景，完成二叉树高频练习题 8 题，并使用文档进行总结 |
+
+## 模版
+你可以通过我们提供的 notion 模版来制订并且执行计划
 
 
 
