--- a/docs/简历投递/投递之前.md
+++ b/docs/简历投递/投递之前.md
@@ -2,12 +2,9 @@
 sidebar_position: 1
 ---
 
-# 刻意练习
+# 投递之前
 
-new grad recurier 和 campus recurier
-go to recurier event
-connact to 工程师，然后再是招聘者
-eventbrite 以及 领英上关注脸书等公司，关注招聘活动
-
-算法/系统设计学习曲线
+| 平台   | 链接   | 特点   | 备注 |
+|------- | ------ | ------ | ---- |
+| 领英   | https://www.linkedin.com/jobs/ | 职场首选的求职平台，有许多招聘人员在上面。| 领英信息要包括照片，过往教育以及工作经历，内容需要与简历同步 |
 
