--- a/docs/简历投递/投递期间.md
+++ b/docs/简历投递/投递期间.md
@@ -56,3 +56,8 @@ If you don't have a Github account, I suggest you sign up for one. It's a great 
 
 A well-maintained LinkedIn account is a definite plus, and in most cases, you should use it and match the content to your resume. This will give your resume more credibility and personal expertise.
 
+## 投递平台
+
+| 平台   | 链接   | 特点   | 备注 |
+|------- | ------ | ------ | ---- |
+| 领英   | https://www.linkedin.com/jobs/ | 职场首选的求职平台，有许多招聘人员在上面。| 领英信息要包括照片，过往教育以及工作经历，内容需要与简历同步 |
