--- a/docs/面试准备/算法指南/基础.md
+++ b/docs/面试准备/算法指南/基础.md
@@ -15,7 +15,7 @@ sidebar_position: 1
 | 60-80 分  | 能够给出次优解，经过提示可以给出最优解         | 代码逻辑没有明显问题，但是细节有不少问题 | 清晰表达自己的思路，与面试官对题目有一定探讨 | 
 | 80-100 分 | 能够给出多种解法，并且分析不同解法的优劣       | 代码命名良好，架构清晰，核心代码有注释 | 清晰表达自己的思路，与面试官对题目进行深入探讨 |
 
-## 怎样解一道题
+## 做题要点
 
 ### 1. 一道题目思考不超过 30 分钟
 一道题目如果思考 30 分钟还是没有思路的话可以马上看官方题解，这样节省不少刷题的时间，如果官方题解涉及你不了解的知识点，可以先快速学习下，但是还是专注在当前的题目本身
