--- a/docs/面试准备/算法指南/瓶颈期.md
+++ b/docs/面试准备/算法指南/瓶颈期.md
@@ -3,3 +3,13 @@ sidebar_position: 1
 ---
 
 # 瓶颈期
+
+| 瓶颈期         | 原因 | 解决方法     | 目标     | 
+| ---------      | ---- | -----------  | -------  |
+| 不理解题目   | <ul><li>平时做题没有计时的习惯，不知道自己写代码所需的时间，所以通过快速阅读来争取时间，忽略了题目要点</li><li>不够耐心和仔细</li></ul>     |<ul><li>仔细耐心阅读题目，边阅读边记下要点，如输入数据，限制条件等</li><li>使用例子帮助理解题目</li><li>对每题做题时间进行计时</li></ul> | 五分钟内能够理解题目含义 |
+| 不理解题解   | <ul><li>没有观察到题目的特点以及使用该数据结构或者算法的原因</li><li>不熟悉题解描述的数据结构或者算法</li><li>题目难度过高，涉及了多种数据结构或者算法</li></ul> | <ul><li>仔细阅读多种类型的国区题解以及美区题解</li><li>列出题解中的数据结构以及算法，逐个学习</li><li>选择更低难度的题目</li></ul> | 能够理解大部分官方题解 |
+| 做过的题目无法 AC   | <ul><li>做题只追求通过，没有思考和总结</li><li>没有学习多个解法，从而从不同角度看待问题，加深印象</li></ul> | <ul><li>做完题目之后进行回顾与总结，尝试不同解法</li><li>了解该类型题目的常用模式，使用场景以及常见错误</li></ul> | 做过的题目基本能够做出来 |
+| 不知道题目是什么类型   | <ul><li>无法有效观察以及分析题目</li><li>不熟悉不同类型题目的特点</li></ul> | <ul><li>学习官方题解的前期分析步骤，观察题目的特点</li><li>总结不同类型题目的使用场景</li></ul> | 能够判断题目大概是什么类型 |
+| 有思路，但是写不对   | <ul><li>思路不够清晰，忽略了重要的细节</li></ul> | <ul><li>写代码前认真思考每一个步骤</li><li>写代码前先利用例子来证明思路的正确性</li></ul> | 代码能够正确实现脑海中的思路|
+| 不记得具体的库以及 API   | <ul><li>对编程语言不够熟练</li><li>不了解常用库</li></ul> | <ul><li>阅读官方题解，学习什么情况下可以用标准库</li><li>学习标准库的 API</li></ul> | 正确写出具体库以及 API |
+
