--- a/docs/前期分析/动机与方向.md
+++ b/docs/前期分析/动机与方向.md
@@ -6,6 +6,8 @@ sidebar_position: 1
 
 ## 动机
 
+认真思考并且记录你想要加入 Big Five 的动机是什么？可以想象成功入职后的场景，在哪些方面会令你最为雀跃。请时刻记住并且利用这些动机来激发以及保持你的学习行为。
+
 [MBA 智库](https://wiki.mbalib.com/wiki/%E5%AD%A6%E4%B9%A0%E5%8A%A8%E6%9C%BA)将动机分为内部动机以及外部动机两种：
 
 ### 内部动机：
@@ -20,9 +22,6 @@ sidebar_position: 1
 - 职业发展
 - 财富诱因
 - 工作签证
-
-认真思考你想要加入 Big Five 的动机是什么？想象成功入职后的场景，哪些方面会令你最为雀跃。请记住并且利用这些动机来激发以及保持你的学习行为。
-
 
 ## 方向
 
@@ -40,7 +39,7 @@ sidebar_position: 1
 ### 信息调研
 你可以通过谷歌，Youtube 等渠道，搜索该岗位的职责以及日常工作内容。搜索 "What software engineer do?"，"What data scientist do?" 等。
 
-### 参加课程
+### 课程学习
 通过亲身参与一些初级课程，你可以对该方向有更深的了解，我们这里推荐了一些免费的入门课程：
 
 - [Intro to HTML and CSS](https://www.udacity.com/course/intro-to-html-and-css--ud001) （前端）
