--- a/docs/前期分析/目标与计划.md
+++ b/docs/前期分析/目标与计划.md
@@ -7,7 +7,7 @@ sidebar_position: 3
 
 ## 目标
 
-在制定计划之前，请先了解求职对各个主题的要求以及总体目标：
+在制定计划之前，请先了解面试各个主题的总体目标：
 
 | 主题        | 总体目标 | 所需时间 |
 | ----------- | -------  | ---- |
