--- a/docs/面试准备/算法指南/基础.md
+++ b/docs/面试准备/算法指南/基础.md
@@ -15,6 +15,12 @@ sidebar_position: 1
 | 60-80 分  | 能够给出次优解，经过提示可以给出最优解         | 代码逻辑没有明显问题，但是细节有不少问题 | 清晰表达自己的思路，与面试官对题目有一定探讨 | 
 | 80-100 分 | 能够给出多种解法，并且分析不同解法的优劣       | 代码命名良好，架构清晰，核心代码有注释 | 清晰表达自己的思路，与面试官对题目进行深入探讨 |
 
+## 常见问题
+
+| 分数      | 解题能力     | 代码能力 | 沟通能力 |
+| -----     | -----------  | -------  | -------  |
+| 直接写代码   | 不懂得如何分析题目，即使多次提示也无法理解题目 | 没有写任何代码 | 思路混乱，无法沟通|
+
 ## 做题要点
 
 ### 1. 一道题目思考不超过 30 分钟
