--- a/docs/前期分析/面试内容.md
+++ b/docs/前期分析/面试内容.md
@@ -4,19 +4,21 @@ sidebar_position: 2
 
 # 面试内容
 
+你需要先了解 Big Five 面试的考核内容才能更好地制订目标与计划
+
 ## 面试方式
-面试方式包括 Online Assessment (OA)，电话面试，现场面试三种方式，具体细节请浏览面试流程。
+Big Five 一般包括 5 轮以上面试，面试方式包括 Online Assessment (OA)，电话面试，现场面试三种方式，具体细节请浏览第四章面试流程。
 
 ## 面试主题
-Big Five 一般包括 5 轮面试，分别为：
+面试主题分别为算法，系统设计，项目，基础知识，非技术问题：
 
 | 主题        | 介绍 |
 | ----------- | ---- |
-| 算法        | <ul><li>占比：60% - 80%</li><li>内容：算法题</li><li>方式：使用白板或者 IDE 写出算法题的解法</li><li>例子：三数之和，岛屿数量</li><li>备注：70% 的题目是 Leetcode 上简单或中等难度的题目</li></ul>|
-| 系统设计    | <ul><li>占比：0% - 20%（实习或校招不考核）</li><li>内容：根据需求设计合适的系统架构</li><li>方式：使用白板或者绘图工具绘制出系统架构，设计数据库表结构以及实现核心 API</li><li>例子：如何设计信息流系统？如何设计分布式存储系统？</li><li>备注：亚马逊校招与社招会考核 OOD，需要着重准备</li></ul>|
-| 项目        | <ul><li>占比：0% - 10%</li><li>内容：项目内容介绍</li><li>方式：根据面试官的提问进行回答</li><li>例子：项目最有挑战性的地方在哪里？项目为什么使用这个方案？</li><li>备注：微软与苹果考核得较多</li></ul>|
-| 基础知识    | <ul><li>占比：5% - 10%</li><li>内容：编程语言，数据库，网络协议，操作系统基础</li><li>方式：根据面试官的提问进行回答</li><li>例子：进程与线程的区别？关系型数据库和非关系型数据库的不同？</li><li>备注：微软与苹果考核得较多</li></ul>|
-| 非技术问题   | <ul><li>占比：10% - 30%</li><li>内容：团队合作能力，职业规划与个人成长</li><li>方式：根据面试官的提问进行回答</li><li>例子：如何平衡工作与生活？如何从失败中学习？</li><li>备注：亚马逊考核得较多</li></ul>|
+| 算法        | <ul><li><b>占比：60% - 80%</b></li><li>内容：算法题</li><li>方式：使用白板或者 IDE 写出算法题的解法</li><li>例子：三数之和，岛屿数量</li><li>备注：70% 的题目是 Leetcode 上简单或中等难度的题目</li></ul>|
+| 系统设计    | <ul><li><b>占比：0% - 20%</b>（实习或校招不考核）</li><li>内容：根据需求设计合适的系统架构</li><li>方式：使用白板或者绘图工具绘制出系统架构，设计数据库表结构以及实现核心 API</li><li>例子：如何设计信息流系统？如何设计分布式存储系统？</li><li>备注：亚马逊校招与社招会考核 OOD，需要着重准备</li></ul>|
+| 项目        | <ul><li><b>占比：0% - 10%</b></li><li>内容：项目内容介绍</li><li>方式：根据面试官的提问进行回答</li><li>例子：项目最有挑战性的地方在哪里？项目为什么使用这个方案？</li><li>备注：微软与苹果考核得较多</li></ul>|
+| 基础知识    | <ul><li><b>占比：5% - 10%</b></li><li>内容：编程语言，数据库，网络协议，操作系统基础</li><li>方式：根据面试官的提问进行回答</li><li>例子：进程与线程的区别？关系型数据库和非关系型数据库的不同？</li><li>备注：微软与苹果考核得较多</li></ul>|
+| 非技术问题   | <ul><li><b>占比：10% - 30%</b></li><li>内容：团队合作能力，职业规划与个人成长</li><li>方式：根据面试官的提问进行回答</li><li>例子：如何平衡工作与生活？如何从失败中学习？</li><li>备注：亚马逊考核得较多</li></ul>|
 
 :::note
 你可以通过 [Leetcode Discuss](https://leetcode.com/discuss/interview-question?currentPage=1&orderBy=hot&query=) 来浏览其他人的面经，大致了解题目的类型以及难度。
@@ -24,7 +26,11 @@ Big Five 一般包括 5 轮面试，分别为：
 
 
 ## 错误例子
-你需要根据面试主题来分配时间，例如对于校招来说，大部分时间应该放在算法以及项目中。一位朋友在面试谷歌软件工程师岗位之前花了一年半实现钻研当时最热门的机器学习。他犯了一个关键错误，软件工程师主要考核算法以及系统设计，机器学习项目或许能够帮他提高获得面试的机会，但是花大量时间在里面对于面试毫无帮助。他错误地以为谷歌的面试官那么厉害，一定能够在 45 分钟的面试中全面考察到他各方面的能力。但是这是错的，面试官不会去考核岗位要求以外的内容，更不会去考核自己不了解的内容。
+一位朋友在面试谷歌软件工程师岗位之前花了一年半时间学习当时最热门的机器学习。他犯了一个关键错误，软件工程师主要考核算法以及系统设计，机器学习项目或许能够帮他提高获得面试的机会，但是花大量时间在里面对于面试毫无帮助。他错误地以为谷歌的面试官那么厉害，一定能够在 45 分钟的面试中全面考察到他各方面的能力。但是这是错的，面试官不会去考核岗位要求以外的内容，更不会去考核自己不了解的内容。
+
+:::note
+你需要根据面试主题来分配时间，例如对于校招，大部分时间应该放在算法以及项目中。
+:::
 
 ## 推荐阅读
 
