--- a/docs/前期分析/如何练习.md
+++ b/docs/前期分析/如何练习.md
@@ -6,20 +6,20 @@ sidebar_position: 4
 
 在[《刻意练习：如何从新手到大师》](https://www.amazon.cn/dp/B01M6ZBZY3)这本书中，提到了如何利用刻意练习来提高学习的效率，这个技巧对于面试准备很有帮助，本章会引用该书的一些观点来阐述如何进行有效的练习。
 
-## 天真的练习
-天真的练习指的是盲目地，没有目标，没有反馈的练习。以打篮球为例，如果你想提高投篮的命中率，可能觉得每天练习投篮就够了。但是如果你仅仅在机械地重复投篮，没有通过观察自己的错误而做出调整，那么这样的练习即使更多也对命中率没有提升。相反，过多的练习反而会强化你原有的坏习惯，例如错误的投篮姿势。算法也一样，想通过大量地做题来掌握某个题型的练习方法是不正确的，仅仅以通过测试用例为目标，缺乏思考与观察，无法发现自己的问题，更不用说针对问题改进了。
+## 避免天真的练习
+天真的练习指的是盲目地，没有目标，没有反馈的练习。以投篮为例，如果你想提高投篮的命中率，可能觉得每天练习投篮就够了。但是如果你仅仅在机械地重复投篮，没有通过观察自己的错误而做出调整，那么这样的练习即使更多也对命中率没有提升。相反，过多天真的练习反而会强化你原有的坏习惯，例如错误的投篮姿势。算法也一样，想通过大量地做题来掌握某个题型的练习方法是不正确的，仅仅以通过测试用例为目标，缺乏思考与观察，无法发现自己的问题，更不用说针对问题改进了。
 
 ## 更好的训练方法
 
-回到打篮球的例子，通过自省（一般是通过录像）以及比你更优秀的球员的观察，你可以列出导致投篮命中率低的问题以及解决方案：
+回到投篮的例子，通过自省（一般是通过录像）以及比你更优秀的球员对你投球的观察，你可以列出导致投篮命中率低的问题以及解决方案：
 
 | 问题              | 解决方案                |
 | -----------       | -------                        |
 | 抛物线太平        | 确保每次投篮的抛物线超过 60 度 |
-| 投球前没有下沉    | 训练下沉动作    |
-| 握球手不够展开    | 训练握球动作    |
+| 投球前没有下沉    | 训练下沉动作，确保下沉幅度够大    |
+| 握球手不够展开    | 训练握球动作，确保手正确展开    |
 
-你可以看到，通过将投篮命中率低划分成几个小的问题，针对每个问题进行独立训练，要比机械训练更有效果。算法也是一样，如果你观察自己没有掌握二叉树的题目，那么可能的问题如下：
+你可以看到，通过将投篮命中率低划分成几个小的问题，针对每个小问题进行独立训练，要比天真的练习更有效果。从算法的角度，如果你观察到自己没有掌握二叉树的题目，那么可能的问题是：
 
 | 问题        | 解决方案                |
 | ----------- | -------                     |
@@ -27,31 +27,26 @@ sidebar_position: 4
 | 不熟悉二叉树类以及节点类    | 学习二叉树的数据结构类型    |
 | 不熟悉二叉树的常见遍历方式  | 使用递归以及非递归练习二叉树遍历    |
 
-如果只是盲目做题的话，你所选的题目刚好针对你的问题而设计的，效果也就事倍功半。可以看到，一个简单的分解问题的技巧，就能提升做题的效果。
+针对这些问题选择该方向的题目进行练习，会更有效果。
 
+## 追求刻意练习
 
-## 刻意练习
-
-有没有更好的方法呢？
-
-> 如果你发现某种方法管用，继续做下去；如果不管用，马上停下来。你越是能够调整自己的练习方法，模仿所在行业或领域中最杰出的人物，那你的练习也可能越是有效。
-
-这里我们介绍刻意练习：
+刻意练习从更多维度来观察并且记录自己的情况，同时也需要导师或者朋友的帮助，它有以下几个特点：
 
 > 1. 刻意练习发生在人们的舒适区之外，而且要求学生持续不断地尝试那些刚好超出他当前能力范围的事物。因此，它需要人们付出近乎最大限度的努力。一般来讲，这并不令人心情愉快。
 
-- 篮球：你应该先从靠近篮筐的地方开始练习投篮，这样能够更加专注在投篮的基础，例如姿势而不是力度。
+- 篮球：你应该先从靠近篮筐的地方开始练习投篮，这样能够更加专注在投篮的基础，例如投篮姿势而不是力度。
 - 算法：选择合适自己水平的题目，每道题目从做完题目到阅读题解大概花费 30 分钟的时间。
 
 > 刻意练习包含得到良好定义的特定目标，通常还包括目标表现的某些方面；它并非指向某些模糊的总体改进。一旦设定了总体目标，导师或教练将制订一个计划，以便实现一系列微小的改变，最后将这些改变累积起来，构成之前期望的更大的变化。改进目标表现的某些方面，使得从业者能够看到他的表现已经通过练习得到了提高。
 
 - 篮球：寻找比你强的朋友或者老师从旁观察你的问题，列出问题并且给出练习方法。
-- 算法：通过结对编程，或者寻找一位优秀的导师协助你发现问题以及制订算法计划，例如每周攻克一个主题的算法题，每周完成一次竞赛。
+- 算法：通过结对编程或寻找一位优秀的导师协助你发现问题并制订合适你的学习计划，例如每周攻克一个主题的算法题，每周完成一次竞赛。
 
 > 刻意练习是有意而为的，也就是说，它需要人们完全的关注和有意识的行动。简单地遵照导师或教练的指示去做，还不够。学生必须紧跟他的练习的特定目标，以便能做出适当的调整，控制练习。
 
-- 篮球：自己不断去发现投篮中出现的新问题以及提出解决方案。
-- 算法：每周完成一个主题的算法题之后，需要自己主动去总结这类题目的模式，使用常见以及自己犯的常见错误。
+- 篮球：自己不断去主动观察投篮中出现的新问题以及尝试提出解决方案。
+- 算法：每周完成一个主题的算法题之后，需要自己主动去总结这类题目的模式，使用场景。通过观察自己的错误提交，记录自己犯的常见错误。
 
 > 刻意练习包含反馈，以及为应对那些反馈而进行调整的努力。在练习过程的早期，大量的反馈来自导师或教练，他们将监测学生的进步、指出存在的问题，并且提供解决这些问题的方法。随着时间的推移，学生必须学会自己监测自己、自己发现错误，并做出相应调整。这种自我监测，需要高效的心理表征。
 
