--- a/docs/前期分析/目标与计划.md
+++ b/docs/前期分析/目标与计划.md
@@ -19,10 +19,21 @@ sidebar_position: 3
 你选择的学习内容不应该对于你太简单或者太难，应该选择一些你需要一些思考以及时间就能完成的题目。对于算法题来说，每题所花费的时间应该在 30 分钟左右，否则你应该提高或者降低难度。
 
 ### 有反馈
-计划的内容应该是能够得到反馈的，算法题你可以从平台的判断来获得反馈，系统设计以及基础知识可以通过与其他工程师交流或者模拟面试来得到反馈。
+计划中的内容应该能够及时得到反馈的，算法题你可以从代码平台获得反馈，也可以通过制定不同的做题目标来观察自己没有掌握的细节，对于每道算法题，我们建议观察以下指标：
+
+| 观察指标          | 目的                |
+| -----------       | -------                        |
+| 通过测试用例      | 这是最基本的要求，代表代码能够在限制时间和内存内通过测试|
+| 做题时间          | 如果你清楚自己大概的做题时间的话，那么在面试中就不会那么紧张，同时能够有更多的时间进行前期的分析以及思考    |
+| 正确分析时空复杂度| 分析时空复杂度能够帮助你完理解程序的运行流程以及方式，能够在脑海中形成更加清晰的思路。面试中也会被问到    |
+| 能用两个解法解题| 强制要求你从不同角度去观察与分析题目，帮助你熟悉不同类型题目的常见解法以及模式    |
+| 设计并完成 follow up| 在真实面试中往往会有 follow up，如果你在完成题目后能够通过修改一些条件来设计 follow up，不仅能够对题目有更深的理解，同时也能为面试的 follow up 做准备。    |
+| 三天后 15 分钟内能够通过| 有的题目你可能当天无法自己解答，需要看题解或者通过讨论，那么三天后再次做的话就能检查是不是真正掌握    |
+
+同样的，系统设计以及基础知识可以使用类似的方法来得到反馈。
 
 ### 针对性
-你的计划应该是具体明确的，不是一个广泛的计划，能够完成简单难度的算法题就不是一个有针对性的计划，参考：
+你的计划应该是具体明确而不是一个广泛的计划，例如，能够完成简单难度的算法题就不是一个有针对性的计划，有针对性的计划应该像：
 
 | 主题        | 计划 | 
 | ----------- | -------  |
