--- a/docs/面试准备/算法指南/怎样解题.md
+++ b/docs/面试准备/算法指南/怎样解题.md
@@ -90,7 +90,12 @@ function findFirst(nums, target):
 | 二叉树 | <ul><li>思考递归解法的递推公式</li><li>选择合适的递归函数，注意停止条件以及边界情况</li><li>思考非递归解法</li></ul> | <ul><li>递归</li><li>使用栈模拟递归</li><li>Morris 遍历</li></ul> | <ul><li>二叉搜索树的使用场景</li><li>其他树结构的使用场景</li></ul> | <ul><li>递归的递推公式，循环不变式，停止条件的理解</li><li>时空复杂度的分析</li></ul> |
 | 二分查找 | <ul><li>找到单调递增或递减的数据区间</li><li>选择二分查找的模版</li></ul> | <ul><li>单调区间分析</li><li>二分查找模版</li></ul> | <ul><li>判断元素是否在单调区间中</li><li>区间中大于等于元素的索引值</li><li>区间中严格大于元素的索引值</li></ul> | <ul><li>找到单调区间</li><li>循环不变式，退出循环的条件</li></ul> |
 
-《计算机科学中的数学》给出了回顾的要点：
+### 总结
+
+> 学生之间的差别，在很大程度上最有可能取决于他们能多敏锐地察觉自己所犯的错误。
+回顾和总结或许是最重要也最被忽略的一步。
+
+《计算机科学中的数学》给出了数学证明中回顾的要点，在算法题也十分适用：
 
 - 陈述计划：好的解题方案通常可以从一般性的解法开始，例如：我们可以使用递归来解决这个问题，我们可以使用分治来解决这个问题。
 - 步骤清晰：按照固定的顺序解题，例如从整体到局部，从上到下。切忌在不同的子问题中随意跳转。
