Modify semantic to make it closer to LeetCode

--- a/docs/算法指南/面试流程.md
+++ b/docs/算法指南/面试流程.md
@@ -16,7 +16,8 @@ sidebar_position: 62
 无论这道题对你来说是简单还是难，**每道算法题都需要按照以下模版输出文档：**
 
 - Questions:（边听问题边记录关键点，确保正确理解题目，不需要注重文法严谨性）
-- Input:（题目输入的范围以及限制）
+- Input:（题目输入）
+- Constraints: (输入的范围以及限制)
 - Output:（输出的范围以及限制）
 - Requirement: (optional) (题目特殊的时空复杂度要求）
 - Test case: （根据输入类型选择几个测试用例）
@@ -31,8 +32,13 @@ sidebar_position: 62
     exactly one solution
 
     Input: 
-    1 ≤ array.length < 10^6
-    0 ≤ array[i] < 10^8
+    array: array of integers
+    T: an integer
+
+    Constraints:
+    2 <= array.length < 10^4
+    -10^9 <= array[i] < 10^9
+    -10^9 <= T <= 10^9
 
     Output:
     [i, j]
